--- a/index.html
+++ b/index.html
@@ -32,17 +32,20 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">News</a>
-            </li>
-            <button type="button">Login/Sign-up</button>
+            </li> 
            </ul>
         </div>
       </nav>
-              
+        
     <header class="page-header header container-fluid">
-
+      <div class="description">
+        <h1>Dota 2 High School League 2020</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+      </div>
     </header>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   
 
 </body>
 
