--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@
     <header class="page-header header container-fluid">
       <div class="description">
         <h1>Dota 2 High School League 2020</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+        <br>
+        <div class="row">
+          <div class="col -3">
+            <h2>Prize Pool:</h2>
+            <h3>$3,500</h3>
+          </div>
+          <div class="col -3">
+            <h2>Registration Closes:</h2>
+            <h3>3rd August 2020</h3>
+          </div>
+          <div class="col -3">
+            <h2>Division:</h2>
+            <h3>High School League</h3>
+          </div>
+          <div class="col -3">
+            <h2>Format:</h2>
+            <h3>5V5 Round Robin</h3>
+          </div>
+        </div>
       </div>
     </header>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
