--- a/index.html
+++ b/index.html
@@ -41,26 +41,37 @@
       <div class="description">
         <h1>Dota 2 High School League 2020</h1>
         <br>
+        <button type=button class=btn ><strong>  Register  </strong></button>
+        <br>
+        <br>
         <div class="row">
-          <div class="col -3">
+          <div class="col -lg-3 col -md-3 col -sm-6">
             <h2>Prize Pool:</h2>
             <h3>$3,500</h3>
           </div>
-          <div class="col -3">
+          <div class="col -lg-3 col -md-3 col -sm-6">
             <h2>Registration Closes:</h2>
             <h3>3rd August 2020</h3>
           </div>
-          <div class="col -3">
+          <div class="col -lg-3 col -md-3 col -sm-6">
             <h2>Division:</h2>
             <h3>High School League</h3>
           </div>
-          <div class="col -3">
+          <div class="col -lg-3 col -md-3 col -sm-6">
             <h2>Format:</h2>
             <h3>5V5 Round Robin</h3>
           </div>
         </div>
+        <h4> Quick Find </h4>
+        <a href="">General Information</a>
+        <br>
+        <a href="">Tournament Structure</a>
+        <br>
+        <a href="">Questions?</a>
+      </div>
       </div>
     </header>
+     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    
