--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body data-sky= "scroll" data-offset="50">
     <nav class="navbar navbar-expand-md">
         <img src="Images\LPL White (1).png" title="LPL logo" alt="LPL logo"> </img>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
@@ -36,7 +36,7 @@
            </ul>
         </div>
       </nav>
-        
+    <br>
     <header class="page-header header container-fluid">
       <div class="description">
         <h1>Dota 2 High School League 2020</h1>
@@ -62,12 +62,14 @@
             <h3>5V5 Round Robin</h3>
           </div>
         </div>
-        <h4> Quick Find </h4>
-        <a href="">General Information</a>
-        <br>
-        <a href="">Tournament Structure</a>
-        <br>
-        <a href="">Questions?</a>
+        <div row>
+          <h4> Quick Find </h4>
+          <a href="">General Information</a>
+          <br>
+          <a href="">Tournament Structure</a>
+          <br>
+          <a href="">Questions?</a>
+        </div>
       </div>
       </div>
     </header>
