--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
             <h3>5V5 Round Robin</h3>
           </div>
         </div>
-        <div row>
-          <h4> Quick Find </h4>
-          <a href="">General Information</a>
-          <br>
-          <a href="">Tournament Structure</a>
-          <br>
-          <a href="">Questions?</a>
-        </div>
       </div>
       </div>
     </header>
      
+    <div class= "container features">
+        <h4> Quick Find </h4>
+        <a href="">General Information</a>
+        <br>
+        <a href="">Tournament Structure</a>
+        <br>
+        <a href="">Questions?</a>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    
