--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md">
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg scrolling-navbar">
         <img src="Images\LPL White (1).png" title="LPL logo" alt="LPL logo"> </img>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,8 +37,41 @@
            </ul>
         </div>
       </nav>
+  </header>
 
+  
 
+  <div class="container-fluid">
+  <div class="description">
+    <div class="row justify-content-center">
+      <h1>Dota 2 High School League 2020</h1>
+    </div>
+    <div class="row justify-content-center">
+      <button type=button class=btn ><strong>  Register  </strong></button>  
+    </div>
+    <br>
+    <div class="row justify-content-center">
+      <div class="col -lg-3 col -md-3 col -sm-6">
+        <h2>Prize Pool:</h2>
+        <h3>$3,500</h3>
+      </div>
+      <div class="col -lg-3 col -md-3 col -sm-6">
+        <h2>Registration Closes:</h2>
+        <h3>3rd August 2020</h3>
+      </div>
+      <div class="col -lg-3 col -md-3 col -sm-6">
+        <h2>Division:</h2>
+        <h3>High School League</h3>
+      </div>
+      <div class="col -lg-3 col -md-3 col -sm-6">
+        <h2>Format:</h2>
+        <h3>5V5 Round Robin</h3>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    
