--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body> 
   <header>
     <nav class="navbar fixed-top navbar-expand-lg scrolling-navbar">
         <img src="Images\LPL White (1).png" title="LPL logo" alt="LPL logo"> </img>
@@ -41,36 +41,37 @@
 
   
 
-  <div class="container-fluid">
-  <div class="description">
-    <div class="row justify-content-center">
+  <main class="container-fluid">
+    <div class="row justify-content-center description">
       <h1>Dota 2 High School League 2020</h1>
-    </div>
-    <div class="row justify-content-center">
+      <br>
       <button type=button class=btn ><strong>  Register  </strong></button>  
     </div>
-    <br>
-    <div class="row justify-content-center">
-      <div class="col -lg-3 col -md-3 col -sm-6">
-        <h2>Prize Pool:</h2>
-        <h3>$3,500</h3>
-      </div>
-      <div class="col -lg-3 col -md-3 col -sm-6">
-        <h2>Registration Closes:</h2>
-        <h3>3rd August 2020</h3>
-      </div>
-      <div class="col -lg-3 col -md-3 col -sm-6">
-        <h2>Division:</h2>
-        <h3>High School League</h3>
-      </div>
-      <div class="col -lg-3 col -md-3 col -sm-6">
-        <h2>Format:</h2>
-        <h3>5V5 Round Robin</h3>
+
+   
+   <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col -lg-3 col -md-3 col -sm-6">
+          <h2>Prize Pool:</h2>
+          <h3>$3,500</h3>
+        </div>
+        <div class="col -lg-3 col -md-3 col -sm-6">
+          <h2>Registration Closes:</h2>
+          <h3>3rd August 2020</h3>
+        </div>
+        <div class="col -lg-3 col -md-3 col -sm-6">
+          <h2>Division:</h2>
+          <h3>High School League</h3>
+        </div>
+        <div class="col -lg-3 col -md-3 col -sm-6">
+          <h2>Format:</h2>
+          <h3>5V5 Round Robin</h3>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
 
+  </main>
+  
   <div class="container-fluid">
     <div class="quick-find">
       <div class="row justify-content-center">
@@ -80,9 +81,10 @@
       <a href="">Tournament Structure</a>
       <br>
       <a href="">Questions?</a>
+      </div>
     </div>
-    </div>
-</div>
+  </div>
+
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
