--- a/test.html
+++ b/test.html
@@ -40,38 +40,36 @@
   </header>
 
   
-
-  <main class="container-fluid">
+  <div class="container-fluid">
     <div class="row justify-content-center description">
       <h1>Dota 2 High School League 2020</h1>
       <br>
       <button type=button class=btn ><strong>  Register  </strong></button>  
     </div>
+  </div>
 
-   
-   <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col -lg-3 col -md-3 col -sm-6">
-          <h2>Prize Pool:</h2>
-          <h3>$3,500</h3>
-        </div>
-        <div class="col -lg-3 col -md-3 col -sm-6">
-          <h2>Registration Closes:</h2>
-          <h3>3rd August 2020</h3>
-        </div>
-        <div class="col -lg-3 col -md-3 col -sm-6">
-          <h2>Division:</h2>
-          <h3>High School League</h3>
-        </div>
-        <div class="col -lg-3 col -md-3 col -sm-6">
-          <h2>Format:</h2>
-          <h3>5V5 Round Robin</h3>
-        </div>
-      </div>
-    </div>
+<div class="container title">
+  <div class="row justify-content-center">
+  <div class="col -lg-3 col -md-3 col -sm-6">
+    <h2>Prize Pool:</h2>
+    <h3>$3,500</h3>
+  </div>
+  <div class="col -lg-3 col -md-3 col -sm-6">
+    <h2>Registration Closes:</h2>
+    <h3>3rd August 2020</h3>
+  </div>
+  <div class="col -lg-3 col -md-3 col -sm-6">
+    <h2>Division:</h2>
+    <h3>High School League</h3>
+  </div>
+  <div class="col -lg-3 col -md-3 col -sm-6">
+    <h2>Format:</h2>
+    <h3>5V5 Round Robin</h3>
+  </div>
+</div>
+</div>
 
-  </main>
-  
+
   <div class="container-fluid">
     <div class="quick-find">
       <div class="row justify-content-center">
@@ -84,6 +82,7 @@
       </div>
     </div>
   </div>
+  
 
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
