--- a/test-2.html
+++ b/test-2.html
@@ -40,15 +40,37 @@
         </div>
     </nav>
 
-    <header>
-        <div class="container-fluid" style="height: 400px; background-color: orange;">
-
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/dota2Cover.jpg" alt="Dota 2 cover image">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/girlOnWolf.jpg" alt="Girl on armoured wolf">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/greenManWithLightening.jpg" alt="Green man in armour shooting lightening">
+          </div>
         </div>
-    </header>
-    <div class="container-fluid" style="background-color: yellow;">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>    
+
+    <div class="container-fluid">
         <div class="description">
             <h1> 
-                This is my heading
+                Dota 2 High School League 2020
             </h1>
             <button type="button" class="btn"  >
                 <strong>  
