--- a/test-2.html
+++ b/test-2.html
@@ -271,7 +271,7 @@
         <div class="container-fluid">
             <div class="footer">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-4">
+                    <div class="col-lg-2 col-md-2 col-sm-4"> 
                             <ul class="footer-title">
                                 <h2>Esports</h2>
                             </ul>
@@ -337,50 +337,44 @@
                             <h3>Privacy</h3>
                         </ul>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <ul class="footer-title">
-                            <h2>Broadcasters</h2>
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
+                    <div class="col-lg-3 col-md-3 col-sm-12">
+                        <h2>Broadcasters</h2>
+                        <img src="images/i1MaoriTv.png">
+                        <img src="images/i2Sky.png">
+                        <img src="images/i3Twitch.png">
+                        <img src="images/i4SevenMate.png">
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <ul class="footer-title">
-                            <h2>Partners</h2>
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
-                        <ul class="footer-item">
-                            <img href="">
-                        </ul>
+                    <div class="col-lg-3 col-md-3 col-sm-12">
+                        <h2>Partners</h2>
+                        <img src="images/i5SkyCity.png">
+                        <img src="images/i6Vodafone.png">
+                        <img src="images/i7PlayStuff.png">
+                        <img src="images/i8Konka.png">
                     </div>
                 </div>
                 <div class="row credits">
-                    <div class="col-lg-3 col-md-3 col-sm-4">
-                        <img src="Images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
+                    <div class="col-lg-3 col-md-3 col-sm-4 logo">
+                        <img src="images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-4">
-                        <h2>ctfygyftyc:</h2>
+                    <div class="social"></div>
+                        <div class="col-lg-1 col-md-1 col-sm-4">
+                            <img src="images/">
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-4">
+                            <img src="images/">
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-4">
+                            <img src="images/">
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-4">
+                            <img src="images/">
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-4">
+                            <img src="images/">
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-4">
-                        <h2>srygvihyotgfv:</h2>
+                    </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 copyright">
+                        <h2>© Lets Play Live Media Ltd. <br> All rights reserved.</h2>
                     </div>
                     
                 </div>
