--- a/test-2.html
+++ b/test-2.html
@@ -109,16 +109,16 @@
     <div class="container">
         <div class="quick">
             <h4> Quick Find </h4>
-            <a href="">General Information</a>
+            <a href="#information">General Information</a>
             <br>
-            <a href="">Tournament Structure</a>
+            <a href="#tournament">Tournament Structure</a>
         </div>
     </div>
 
     <div class="container-fluid">
         <div class="info">
             <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div id="information" class="col-lg-6 col-md-6 col-sm-12">
                         <h2>General Information</h2>
                         <p>
                             LetsPlay.Live, Australasia’s leading esports tournament platform & broadcaster, are delighted to announce High School League Season 2 for 2019.
@@ -181,7 +181,7 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div id="tournament" class="col-lg-6 col-md-6 col-sm-12">
                     <h2>Tournament Structure</h2>
                     <p>
                         Register
@@ -353,10 +353,9 @@
                     </div>
                 </div>
                 <div class="row credits">
-                    <div class="col-lg-3 col-md-3 col-sm-4 logo">
+                    <div class="col-lg-4 col-md-4 col-sm-4 logo">
                         <img src="images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
                     </div>
-                    <div class="social"></div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
                             <img src="images/">
                         </div>
@@ -371,10 +370,9 @@
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
                             <img src="images/">
-                    </div>
-                    </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 copyright">
-                        <h2>© Lets Play Live Media Ltd. <br> All rights reserved.</h2>
+                        </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 copyright">
+                        <h2>© Lets Play Live Media Ltd. All rights reserved.</h2>
                     </div>
                     
                 </div>
