--- a/test-2.html
+++ b/test-2.html
@@ -357,19 +357,19 @@
                         <img src="images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
                     </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
-                            <img src="images/">
+                            <img src="images/facebook.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
-                            <img src="images/">
+                            <img src="images/twitter.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
-                            <img src="images/">
+                            <img src="images/youtube.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
-                            <img src="images/">
+                            <img src="images/discord.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4">
-                            <img src="images/">
+                            <img src="images/twitch.png">
                         </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 copyright">
                         <h2>© Lets Play Live Media Ltd. All rights reserved.</h2>
