--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li> 
 
                 <li class="nav-item">
-                    <button class="btn login" href="#" title="Login/Sign up button">Login/Sign Up</button>
+                    <button class="btn login" href="#" title="Login/Sign up button" alt="Login/Sign up button">Login/Sign Up</button>
                 </li> 
             </ul>
         </div>
@@ -61,11 +61,11 @@
             <img class="d-block w-100" src="images/greenManWithLightening.jpg" alt="Green man in armour shooting lightening" title="Green man in armour shooting lightening">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" title="Previous image button">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" title="Next image button">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -76,7 +76,7 @@
             <h1> 
                 Dota 2 High School League 2020
             </h1>
-            <button type="button" class="btn register" title="Register button">
+            <button type="button" class="btn register" title="Register button" alt="Register button">
                 <span>
                 <strong>  
                     Register  
@@ -253,7 +253,7 @@
                         <br>
                         <a href="https://drive.google.com/file/d/1bU-waqxWUq-fGN7iKXYoXhotryt8RUVo/view" title="Teacher & Parents HSL Guide link" alt="Teacher & Parents HSL Guide">Click here to read our guide detailing what esports is, how it's beneficial for students, and how the league runs.</a>
                     </p>
-                    <button type="button" class="btn register" title="Register button"  >
+                    <button type="button" class="btn register" title="Register button" alt="Register nutton" >
                         <span>
                             <strong>  
                                 Register  
@@ -340,36 +340,36 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <h2>Broadcasters</h2>
-                        <img src="images/i1MaoriTv.png" title="Maori Television logo" alt="Maori television">
-                        <img src="images/i2Sky.png" title="Sky TV logo" alt="Sky TV">
-                        <img src="images/i3Twitch.png" title="Twitch logo" alt="Twitch">
-                        <img src="images/i4SevenMate.png" title="7 Mate logo" alt="7 Mate">
+                        <img src="images/i1MaoriTv.png" title="Maori Television logo" alt="Maori television logo">
+                        <img src="images/i2Sky.png" title="Sky TV logo" alt="Sky TV logo">
+                        <img src="images/i3Twitch.png" title="Twitch logo" alt="Twitch logo">
+                        <img src="images/i4SevenMate.png" title="7 Mate logo" alt="7 Mate logo">
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <h2>Partners</h2>
-                        <img src="images/i5SkyCity.png" title="Sky City logo" alt="Sky City">
-                        <img src="images/i6Vodafone.png" title="Vodafone logo" alt="Vodafone">
-                        <img src="images/i7PlayStuff.png" title="Play Stuff logo" alt="Play Stuff">
-                        <img src="images/i8Konka.png" title="Konka logo" alt="Konka">
+                        <img src="images/i5SkyCity.png" title="Sky City logo" alt="Sky City logo">
+                        <img src="images/i6Vodafone.png" title="Vodafone logo" alt="Vodafone logo">
+                        <img src="images/i7PlayStuff.png" title="Play Stuff logo" alt="Play Stuff logo">
+                        <img src="images/i8Konka.png" title="Konka logo" alt="Konka logo">
                     </div>
                 </div>
                 <div class="row credits">
                     <div class="col-lg-4 col-md-4 col-sm-4 logo">
                         <img src="images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
                     </div>
-                        <div class="col-lg-1 col-md-1 col-sm-4" title="Facebook social media link" alt="Facebook social media">
+                        <div class="col-lg-1 col-md-1 col-sm-4" title="Facebook social media link" alt="Facebook social media link">
                             <img src="images/facebook.png">
                         </div>
-                        <div class="col-lg-1 col-md-1 col-sm-4" title="Twitter social media link" alt="Twitter social media">
+                        <div class="col-lg-1 col-md-1 col-sm-4" title="Twitter social media link" alt="Twitter social media link">
                             <img src="images/twitter.png">
                         </div>
-                        <div class="col-lg-1 col-md-1 col-sm-4" title="Youtube channel link" alt="Youtube channel">
+                        <div class="col-lg-1 col-md-1 col-sm-4" title="Youtube channel link" alt="Youtube channel link">
                             <img src="images/youtube.png">
                         </div>
-                        <div class="col-lg-1 col-md-1 col-sm-4" title="Discord link" alt="Discord">
+                        <div class="col-lg-1 col-md-1 col-sm-4" title="Discord link" alt="Discord link">
                             <img src="images/discord.png">
                         </div>
-                        <div class="col-lg-1 col-md-1 col-sm-4"title="Twitch link" alt="Twitch">
+                        <div class="col-lg-1 col-md-1 col-sm-4"title="Twitch link" alt="Twitch link">
                             <img src="images/twitch.png">
                         </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 copyright">
