--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="images/dota2Cover.jpg" alt="Dota 2 cover image" title="Dota 2 cover image">
+            <img class="d-block w-100" src="Images/dota2Cover.jpg" alt="Dota 2 cover image" title="Dota 2 cover image">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/girlOnWolf.jpg" alt="Girl on armoured wolf" title="Girl on armoured wolf">
+            <img class="d-block w-100" src="Images/girlOnWolf.jpg" alt="Girl on armoured wolf" title="Girl on armoured wolf">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/greenManWithLightening.jpg" alt="Green man in armour shooting lightening" title="Green man in armour shooting lightening">
+            <img class="d-block w-100" src="Images/greenManWithLightening.jpg" alt="Green man in armour shooting lightening" title="Green man in armour shooting lightening">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
