--- a/index.html
+++ b/index.html
@@ -340,37 +340,37 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <h2>Broadcasters</h2>
-                        <img src="images/i1MaoriTv.png" title="Maori Television logo" alt="Maori television logo">
-                        <img src="images/i2Sky.png" title="Sky TV logo" alt="Sky TV logo">
-                        <img src="images/i3Twitch.png" title="Twitch logo" alt="Twitch logo">
-                        <img src="images/i4SevenMate.png" title="7 Mate logo" alt="7 Mate logo">
+                        <img src="Images/i1MaoriTv.png" title="Maori Television logo" alt="Maori television logo">
+                        <img src="Images/i2Sky.png" title="Sky TV logo" alt="Sky TV logo">
+                        <img src="Images/i3Twitch.png" title="Twitch logo" alt="Twitch logo">
+                        <img src="Images/i4SevenMate.png" title="7 Mate logo" alt="7 Mate logo">
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <h2>Partners</h2>
-                        <img src="images/i5SkyCity.png" title="Sky City logo" alt="Sky City logo">
-                        <img src="images/i6Vodafone.png" title="Vodafone logo" alt="Vodafone logo">
-                        <img src="images/i7PlayStuff.png" title="Play Stuff logo" alt="Play Stuff logo">
-                        <img src="images/i8Konka.png" title="Konka logo" alt="Konka logo">
+                        <img src="Images/i5SkyCity.png" title="Sky City logo" alt="Sky City logo">
+                        <img src="Images/i6Vodafone.png" title="Vodafone logo" alt="Vodafone logo">
+                        <img src="Images/i7PlayStuff.png" title="Play Stuff logo" alt="Play Stuff logo">
+                        <img src="Images/i8Konka.png" title="Konka logo" alt="Konka logo">
                     </div>
                 </div>
                 <div class="row credits">
                     <div class="col-lg-4 col-md-4 col-sm-4 logo">
-                        <img src="images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
+                        <img src="Images\lplWhite.png" title="LPL logo" alt="LPL logo"></img>
                     </div>
                         <div class="col-lg-1 col-md-1 col-sm-4" title="Facebook social media link" alt="Facebook social media link">
-                            <img src="images/facebook.png">
+                            <img src="Images/facebook.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4" title="Twitter social media link" alt="Twitter social media link">
-                            <img src="images/twitter.png">
+                            <img src="Images/twitter.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4" title="Youtube channel link" alt="Youtube channel link">
-                            <img src="images/youtube.png">
+                            <img src="Images/youtube.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4" title="Discord link" alt="Discord link">
-                            <img src="images/discord.png">
+                            <img src="Images/discord.png">
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-4"title="Twitch link" alt="Twitch link">
-                            <img src="images/twitch.png">
+                            <img src="Images/twitch.png">
                         </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 copyright">
                         <h2>© Lets Play Live Media Ltd. All rights reserved.</h2>
