--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <h3>Register</h3>
                         </ul>
                         <ul class="footer-item">
-                            <h3>Sponcers</h3>
+                            <h3>Sponsors</h3>
                         </ul>
                         <ul class="footer-item">
                             <h3>Contact Us</h3>
