--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="search" href="#" title="Search link" alt="Search link">
+                      <img src="Images/search.png">
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" title="Play button">Play</a>
                 </li>
@@ -35,8 +40,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" title="News button">News</a>
-                </li> 
-
+                </li>
                 <li class="nav-item">
                     <button class="btn login" href="#" title="Login/Sign up button" alt="Login/Sign up button">Login/Sign Up</button>
                 </li> 
@@ -74,7 +78,7 @@
     <div class="container-fluid">
         <div class="description">
             <h1> 
-                Dota 2 High School League 2020
+                Dota 2 High School League 2020 Season Two
             </h1>
             <button type="button" class="btn register" title="Register button" alt="Register button">
                 <span>
