--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div id="information" class="col-lg-6 col-md-6 col-sm-12">
                         <h2>General Information</h2>
                         <p>
-                            LetsPlay.Live, Australasia’s leading esports tournament platform & broadcaster, are delighted to announce High School League Season 2 for 2019.
+                            LetsPlay.Live, Australasia’s leading esports tournament platform & broadcaster, are delighted to announce High School League Season 2 for 2020.
                             <br><br>
                             Following the first successful season this year HSL hopes to see even more schools from across Australia and New Zealand participating in competitive inter-school esports tournaments. Dota 2 HSL will be broadcast every week on <a href="Twitch.tv/HighSchoolLeague" title="Twitch link" alt="Twitch link">Twitch.tv/HighSchoolLeague</a> where parents, teachers and students will be able to cheer on their teams.
                         </p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p>
-                        Registrations for this season are now open for high school students across ANZ, with the opportunity for more than one team per school to compete. The first round of tournaments begins the week of Monday 5th August 2019 and will run for 10 weeks, showcasing both Dota 2 and Clash Royale. The top two teams from the initial seeds will battle it out in a best-of-three grand final event the week of 7th October 2019, with Dota 2's live final broadcast live on SKY Sport.
+                        Registrations for this season are now open for high school students across ANZ, with the opportunity for more than one team per school to compete. The first round of tournaments begins the week of Monday 5th August 2020 and will run for 10 weeks, showcasing both Dota 2 and Clash Royale. The top two teams from the initial seeds will battle it out in a best-of-three grand final event the week of 7th October 2020, with Dota 2's live final broadcast live on SKY Sport.
                         <br><br>
                         The HSL gives an opportunity for secondary school students to compete in a competitive esports environment working together as a team and representing their school, similar to traditional high school sports.
                     </p>
@@ -193,7 +193,7 @@
                         <br>
                         Click here: <a href="https://hsl.letsplay.live/hslseason/2/" title="Register link" alt="Register link">https://hsl.letsplay.live/hslseason/2/</a>
                         <br><br>
-                        Registrations close July 31st 2019.
+                        Registrations close August 3rd 2020.
                         <br><br>
                         Schools are allowed more than one team for each tournament, provided that each team has separate players (i.e. student(s) cannot play in more than one Dota 2 team).                       
                     </p>
@@ -215,29 +215,29 @@
                     <p>
                         Key Dates
                         <br>
-                        Registrations Open: 17th July 2019
+                        Registrations Open: 17th July 2020
                         <br>
-                        Registrations Close: 31st July 2019
+                        Registrations Close: 3rd August 2020
                         <br><br>
-                        Week One: 5th August 2019
+                        Week One: 5th August 2020
                         <br>
-                        Week Two: 11th August 2019
+                        Week Two: 11th August 2020
                         <br>
-                        Week Three: 19th August 2019
+                        Week Three: 19th August 2020
                         <br>
-                        Week Four: 26th August 2019
+                        Week Four: 26th August 2020
                         <br>
-                        Week Five: 2nd September 2019
+                        Week Five: 2nd September 2020
                         <br>
-                        Week Six: 9th September 2019
+                        Week Six: 9th September 2020
                         <br>
-                        Week Seven: 16th September 2019
+                        Week Seven: 16th September 2020
                         <br>
-                        Semi Final 1: 23rd September 2019
+                        Semi Final 1: 23rd September 2020
                         <br>
-                        Semi Final 2: 30th September 2019
+                        Semi Final 2: 30th September 2020
                         <br>
-                        Grand Final (Live on SKY Sport): 7th October 2019
+                        Grand Final (Live on SKY Sport): 7th October 2020
                     </p>
                 </div>
             </div>
